fixed issue with dark mode checks

--- a/public/style.css
+++ b/public/style.css
@@ -174,6 +174,12 @@ p.smaller-text {
     font-size: 1.1rem;
     text-decoration: none;
     color: var(--font-color-main);
+    transition: 0.2s ease all;
+}
+
+.pagination-btns > div > a:hover {
+    text-decoration: underline;
+    transform: scale(1.05);
 }
 
 .todo-item-li {
